--- a/index.html
+++ b/index.html
@@ -55,7 +55,89 @@
         </div>
     </div>
     <!--dohow-->
-    <div class = "dohow"></div>
+    <div class = "dohow">
+        <h2>我可以做什麼？</h2>
+        <div class = "button-container">
+            <button>春季</button>
+            <button>夏季</button>
+            <button>秋季</button>
+            <button>冬季</button>
+        </div>
+        <!--spring-->
+        <div class = "spring">
+            <h1>4～6月</h1>
+            <h2>氣溫升高/ 進入梅雨季節</h2>
+            <img src="img/Spring.png" alt="Spring" class="spring">
+            <div class = "carousel">
+                <!--card1-->
+                <div class = "card">
+                    <div class = "card-img">
+                        <img src="img/Pill.png" alt="Pill" class="pill">
+                    </div>
+                    <div class = "card-c">
+                        <h6>應急藥物</h6>
+                    <p>像是感冒藥、退燒藥、止痛藥。</p>
+                    </div>
+                </div>
+                <!--card2-->
+                <div class = "card">
+                    <div class="card-img">
+                        <img src="img/Pad.png" alt="Pad" class="pad">
+                    </div>
+                    <div class = "card-c">
+                        <h6>睡袋和防潮墊</h6>
+                    <p>夜晚氣溫低，特別是在戶外需要防寒的睡具。</p>
+                    </div>
+                </div>
+                <!--card3-->
+                <div class = "card">
+                    <div class = "card-img">
+                        <img src="img/Coat.png" alt="Coat" class="coat">
+                    </div>
+                    <div class = "card-c">
+                        <h6>保暖衣物</h6>
+                    <p>帽子、手套、圍巾、毛毯、厚外套等。</p>
+                    </div>
+                </div>
+                <!--card4-->
+                <div class = "card">
+                    <div class = "card-img">
+                        <img src="img/Hotwater.png" alt="Hotwatert" class="hotwater">
+                    </div>
+                    <div class = "card-c">
+                        <h6>熱飲保溫瓶</h6>
+                    <p>能讓他們攜帶熱水或熱飲，保持溫暖。</p>
+                    </div>
+                </div>
+                <!--card5-->
+                <div class = "card">
+                    <div class = "card-img">
+                        <img src="img/Instant.png" alt="Instant" class="instant">
+                    </div>
+                    <div class = "card-c">
+                        <h6>即時食品</h6>
+                    <p>如泡麵、罐頭食品、麵包等，方便加熱或食用。</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!--summer-->
+        <div class = "summer">
+            <h1>7～9月</h1>
+            <h2>氣溫高/ 颱風季節</h2>
+            <img src="img/Summer.png" alt="Summer" class="summer">
+        </div>
+        <div class = "autumn">
+            <h1>10～12月</h1>
+            <h2>氣溫漸冷/ 降雨減少</h2>
+            <img src="img/Autumn.png" alt="Autumn" class="autumn">
+        </div>
+        <div class = "winter">
+            <h1>1～3月</h1>
+            <h2>氣溫較低/ 雨量相對較少</h2>
+            <img src="img/Winter.png" alt="Winter" class="winter">
+        </div>
+    </div>
     <!--footer-->
     <div class = "footer"></div>
 </body>
