--- a/index.html
+++ b/index.html
@@ -69,6 +69,167 @@
             <h2>氣溫升高/ 進入梅雨季節</h2>
             <img src="img/Spring.png" alt="Spring" class="spring">
             <div class = "carousel">
+                <button class="arrow">&#8249;</button>
+                <!--card1-->
+                <div class = "card">
+                    <div class = "card-img">
+                        <img src="img/Pad.png" alt="Pad" class="pad">
+                    </div>
+                    <div class = "card-c">
+                        <h6>睡袋和防潮墊</h6>
+                        <p>考慮防水設計，幫助他們在濕滑環境中保持乾燥。</p>
+                    </div>
+                </div>
+                <!--card2-->
+                <div class = "card">
+                    <div class="card-img">
+                        <img src="img/Shoe.png" alt="Shoe" class="shoe">
+                    </div>
+                    <div class = "card-c">
+                        <h6>防水鞋套、雨靴</h6>
+                        <p>幫助街友在雨天保護雙腳，避免長時間潮濕導致感染。</p>
+                    </div>
+                </div>
+                <!--card3-->
+                <div class = "card">
+                    <div class = "card-img">
+                        <img src="img/Raincoat.png" alt="Raincoat" class="raincoat">
+                    </div>
+                    <div class = "card-c">
+                        <h6>輕便雨衣</h6>
+                        <p>梅雨季節雨水多，雨衣比傘更方便移動。</p>
+                    </div>
+                </div>
+                <!--card4-->
+                <div class = "card">
+                    <div class = "card-img">
+                        <img src="img/Mosquito.png" alt="Mosquito" class="mosquito">
+                    </div>
+                    <div class = "card-c">
+                        <h6>防蚊用品</h6>
+                        <p>春季蟲蚊多，可以提供防蚊噴霧或貼片。</p>
+                    </div>
+                </div>
+                <button class="arrow">&#8250;</button>
+            </div>
+        </div>
+        <!--summer-->
+        <div class = "summer">
+            <h1>7～9月</h1>
+            <h2>氣溫高/ 颱風季節</h2>
+            <img src="img/Summer.png" alt="Summer" class="summer">
+            <div class = "carousel">
+                <button class="arrow">&#8249;</button>
+                <!--card1-->
+                <div class = "card">
+                    <div class = "card-img">
+                        <img src="img/Sun.png" alt="Sun" class="sun">
+                    </div>
+                    <div class = "card-c">
+                        <h6>防曬霜</h6>
+                        <p>長時間暴露在陽光下，幫助他們防曬。</p>
+                    </div>
+                </div>
+                <!--card2-->
+                <div class = "card">
+                    <div class="card-img">
+                        <img src="img/Bottle.png" alt="Bottle" class="bottle">
+                    </div>
+                    <div class = "card-c">
+                        <h6>礦泉水或運動飲料</h6>
+                        <p>預防中暑和脫水，隨時補充水分。</p>
+                    </div>
+                </div>
+                <!--card3-->
+                <div class = "card">
+                    <div class = "card-img">
+                        <img src="img/Shirt.png" alt="Shirt" class="shirt">
+                    </div>
+                    <div class = "card-c">
+                        <h6>清涼衣物</h6>
+                        <p>T恤、短褲、帽子等透氣性好的衣物。</p>
+                    </div>
+                </div>
+                <!--card4-->
+                <div class = "card">
+                    <div class = "card-img">
+                        <img src="img/Mosquito.png" alt="Mosquito" class="mosquito">
+                    </div>
+                    <div class = "card-c">
+                        <h6>驅蚊劑和蚊帳</h6>
+                         <p>夏季蚊蟲頻繁，尤其在潮濕的環境下。</p>
+                    </div>
+                </div>
+                <!--card5-->
+                <div class = "card">
+                    <div class = "card-img">
+                        <img src="img/Instant.png" alt="Instant" class="instant">
+                    </div>
+                    <div class = "card-c">
+                        <h6>即時食品</h6>
+                        <p>如罐頭、水果、能量棒等，保持簡單易儲存。</p>
+                    </div>
+                </div>
+                <button class="arrow">&#8250;</button>
+            </div>
+        </div>
+        <!--autumn-->
+        <div class = "autumn">
+            <h1>10～12月</h1>
+            <h2>氣溫漸冷/ 降雨減少</h2>
+            <img src="img/Autumn.png" alt="Autumn" class="autumn">
+            <div class = "carousel">
+                <button class="arrow">&#8249;</button>
+                <!--card1-->
+                <div class = "card">
+                    <div class = "card-img">
+                        <img src="img/Sock.png" alt="Sock" class="sock">
+                    </div>
+                    <div class = "card-c">
+                        <h6>厚襪子</h6>
+                        <p>幫助街友保持足部溫暖。</p>
+                    </div>
+                </div>
+                <!--card2-->
+                <div class = "card">
+                    <div class="card-img">
+                        <img src="img/Coat.png" alt="Coat" class="coat">
+                    </div>
+                    <div class = "card-c">
+                        <h6>防風外套和長褲</h6>
+                        <p>秋季風大，氣溫逐漸降低。</p>
+                    </div>
+                </div>
+                <!--card3-->
+                <div class = "card">
+                    <div class = "card-img">
+                        <img src="img/Apple.png" alt="Apple" class="apple">
+                    </div>
+                    <div class = "card-c">
+                        <h6>營養豐富的食物</h6>
+                        <p>秋冬季節需要更多的熱量，可以提供高熱量的食物。</p>
+                    </div>
+                </div>
+                <!--card4-->
+                <div class = "card">
+                    <div class = "card-img">
+                        <img src="img/Mask.png" alt="Mask" class="mask">
+                    </div>
+                    <div class = "card-c">
+                        <h6>口罩</h6>
+                        <p>秋冬季節空氣品質較不佳，避免街友受到流感或其他呼吸道疾病的影響。</p>
+                    </div>
+                </div>
+                <button class="arrow">&#8250;</button>
+            </div>
+        </div>
+        <!--winter-->
+        <div class = "winter">
+            <h1>1～3月</h1>
+            <h2>氣溫較低/ 雨量相對較少</h2>
+            <img src="img/Winter.png" alt="Winter" class="winter">
+            <div class = "carousel">
+                <button class="arrow">&#8249;</button>
                 <!--card1-->
                 <div class = "card">
                     <div class = "card-img">
@@ -119,27 +280,13 @@
                     <p>如泡麵、罐頭食品、麵包等，方便加熱或食用。</p>
                     </div>
                 </div>
+                <button class="arrow">&#8250;</button>
             </div>
-        </div>
-        <!--summer-->
-        <div class = "summer">
-            <h1>7～9月</h1>
-            <h2>氣溫高/ 颱風季節</h2>
-            <img src="img/Summer.png" alt="Summer" class="summer">
-        </div>
-        <div class = "autumn">
-            <h1>10～12月</h1>
-            <h2>氣溫漸冷/ 降雨減少</h2>
-            <img src="img/Autumn.png" alt="Autumn" class="autumn">
-        </div>
-        <div class = "winter">
-            <h1>1～3月</h1>
-            <h2>氣溫較低/ 雨量相對較少</h2>
-            <img src="img/Winter.png" alt="Winter" class="winter">
         </div>
     </div>
     <!--footer-->
     <div class = "footer"></div>
+    
 </body>
 </html>
 
