--- a/aboutAs.html
+++ b/aboutAs.html
@@ -16,6 +16,10 @@
     </div>
     <div class="nav">
     </div>
+    <!-- 趙一如加油 -->
+
+    <img src="img/img_about/icon_House.png">
+
 </body>
 
 </html>
