--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
     </div>
     <!--dohow-->
     <div class = "dohow">
+        <!--do-->
         <h2>我可以做什麼？</h2>
         <div class = "button-container">
             <button>春季</button>
@@ -76,7 +77,7 @@
                         <img src="img/Pad.png" alt="Pad" class="pad">
                     </div>
                     <div class = "card-c">
-                        <h6>睡袋和防潮墊</h6>
+                        <h4>睡袋和防潮墊</h4>
                         <p>考慮防水設計，幫助他們在濕滑環境中保持乾燥。</p>
                     </div>
                 </div>
@@ -86,7 +87,7 @@
                         <img src="img/Shoe.png" alt="Shoe" class="shoe">
                     </div>
                     <div class = "card-c">
-                        <h6>防水鞋套、雨靴</h6>
+                        <h4>防水鞋套、雨靴</h4>
                         <p>幫助街友在雨天保護雙腳，避免長時間潮濕導致感染。</p>
                     </div>
                 </div>
@@ -96,7 +97,7 @@
                         <img src="img/Raincoat.png" alt="Raincoat" class="raincoat">
                     </div>
                     <div class = "card-c">
-                        <h6>輕便雨衣</h6>
+                        <h4>輕便雨衣</h4>
                         <p>梅雨季節雨水多，雨衣比傘更方便移動。</p>
                     </div>
                 </div>
@@ -106,7 +107,7 @@
                         <img src="img/Mosquito.png" alt="Mosquito" class="mosquito">
                     </div>
                     <div class = "card-c">
-                        <h6>防蚊用品</h6>
+                        <h4>防蚊用品</h4>
                         <p>春季蟲蚊多，可以提供防蚊噴霧或貼片。</p>
                     </div>
                 </div>
@@ -126,7 +127,7 @@
                         <img src="img/Sun.png" alt="Sun" class="sun">
                     </div>
                     <div class = "card-c">
-                        <h6>防曬霜</h6>
+                        <h4>防曬霜</h4>
                         <p>長時間暴露在陽光下，幫助他們防曬。</p>
                     </div>
                 </div>
@@ -136,7 +137,7 @@
                         <img src="img/Bottle.png" alt="Bottle" class="bottle">
                     </div>
                     <div class = "card-c">
-                        <h6>礦泉水或運動飲料</h6>
+                        <h4>礦泉水或運動飲料</h4>
                         <p>預防中暑和脫水，隨時補充水分。</p>
                     </div>
                 </div>
@@ -146,7 +147,7 @@
                         <img src="img/Shirt.png" alt="Shirt" class="shirt">
                     </div>
                     <div class = "card-c">
-                        <h6>清涼衣物</h6>
+                        <h4>清涼衣物</h4>
                         <p>T恤、短褲、帽子等透氣性好的衣物。</p>
                     </div>
                 </div>
@@ -156,7 +157,7 @@
                         <img src="img/Mosquito.png" alt="Mosquito" class="mosquito">
                     </div>
                     <div class = "card-c">
-                        <h6>驅蚊劑和蚊帳</h6>
+                        <h4>驅蚊劑和蚊帳</h4>
                          <p>夏季蚊蟲頻繁，尤其在潮濕的環境下。</p>
                     </div>
                 </div>
@@ -166,7 +167,7 @@
                         <img src="img/Instant.png" alt="Instant" class="instant">
                     </div>
                     <div class = "card-c">
-                        <h6>即時食品</h6>
+                        <h4>即時食品</h4>
                         <p>如罐頭、水果、能量棒等，保持簡單易儲存。</p>
                     </div>
                 </div>
@@ -186,7 +187,7 @@
                         <img src="img/Sock.png" alt="Sock" class="sock">
                     </div>
                     <div class = "card-c">
-                        <h6>厚襪子</h6>
+                        <h4>厚襪子</h4>
                         <p>幫助街友保持足部溫暖。</p>
                     </div>
                 </div>
@@ -196,7 +197,7 @@
                         <img src="img/Coat.png" alt="Coat" class="coat">
                     </div>
                     <div class = "card-c">
-                        <h6>防風外套和長褲</h6>
+                        <h4>防風外套和長褲</h4>
                         <p>秋季風大，氣溫逐漸降低。</p>
                     </div>
                 </div>
@@ -206,7 +207,7 @@
                         <img src="img/Apple.png" alt="Apple" class="apple">
                     </div>
                     <div class = "card-c">
-                        <h6>營養豐富的食物</h6>
+                        <h4>營養豐富的食物</h4>
                         <p>秋冬季節需要更多的熱量，可以提供高熱量的食物。</p>
                     </div>
                 </div>
@@ -216,7 +217,7 @@
                         <img src="img/Mask.png" alt="Mask" class="mask">
                     </div>
                     <div class = "card-c">
-                        <h6>口罩</h6>
+                        <h4>口罩</h4>
                         <p>秋冬季節空氣品質較不佳，避免街友受到流感或其他呼吸道疾病的影響。</p>
                     </div>
                 </div>
@@ -236,7 +237,7 @@
                         <img src="img/Pill.png" alt="Pill" class="pill">
                     </div>
                     <div class = "card-c">
-                        <h6>應急藥物</h6>
+                        <h4>應急藥物</h4>
                     <p>像是感冒藥、退燒藥、止痛藥。</p>
                     </div>
                 </div>
@@ -246,7 +247,7 @@
                         <img src="img/Pad.png" alt="Pad" class="pad">
                     </div>
                     <div class = "card-c">
-                        <h6>睡袋和防潮墊</h6>
+                        <h4>睡袋和防潮墊</h4>
                     <p>夜晚氣溫低，特別是在戶外需要防寒的睡具。</p>
                     </div>
                 </div>
@@ -256,7 +257,7 @@
                         <img src="img/Coat.png" alt="Coat" class="coat">
                     </div>
                     <div class = "card-c">
-                        <h6>保暖衣物</h6>
+                        <h4>保暖衣物</h4>
                     <p>帽子、手套、圍巾、毛毯、厚外套等。</p>
                     </div>
                 </div>
@@ -266,7 +267,7 @@
                         <img src="img/Hotwater.png" alt="Hotwatert" class="hotwater">
                     </div>
                     <div class = "card-c">
-                        <h6>熱飲保溫瓶</h6>
+                        <h4>熱飲保溫瓶</h4>
                     <p>能讓他們攜帶熱水或熱飲，保持溫暖。</p>
                     </div>
                 </div>
@@ -276,11 +277,70 @@
                         <img src="img/Instant.png" alt="Instant" class="instant">
                     </div>
                     <div class = "card-c">
-                        <h6>即時食品</h6>
+                        <h4>即時食品</h4>
                     <p>如泡麵、罐頭食品、麵包等，方便加熱或食用。</p>
                     </div>
                 </div>
                 <button class="arrow">&#8250;</button>
+            </div>
+        </div>
+        <!--how-->
+        <h2>怎麼找到無家者？</h2>
+        <div class="carousel1">
+            <!--card1-->
+            <div class = "card1">
+                <div class = "card-img1">
+                    <img src="img/Station.png" alt="Station" class="station">
+                </div>
+                <div class = "card-c1">
+                    <h2>車站</h2>
+                    <hr>
+                    <h4>車站「 聚落」組成，使熱心團體與公民組織有物資時，第一時間就是想到來此分送。</h4>
+                </div>
+            </div>
+            <!--card2-->
+            <div class = "card1">
+                <div class = "card-img1">
+                    <img src="img/Underpass.png" alt="Underpass" class="underpass">
+                </div>
+                <div class = "card-c1">
+                    <h2>地下道</h2>
+                    <hr>
+                    <h4>靠近車站的熱鬧區段，地下道內室友大多三兩成群，彼此不一定認識，但偶爾也會為對方留份便當或協助看顧行李。</h4>
+                </div>
+            </div>
+            <!--card3-->
+            <div class = "card1">
+                <div class = "card-img1">
+                    <img src="img/Arcade.png" alt="Arcade" class="arcade">
+                </div>
+                <div class = "card-c1">
+                    <h2>騎樓</h2>
+                    <hr>
+                    <h4>騎樓的所有權屬於地主，但法律上仍有規定必須開放讓大眾使用、穿越，於是此處便成為了街頭生存的灰色地帶。</h4>
+                </div>
+            </div>
+            <!--card4-->
+            <div class = "card1">
+                <div class = "card-img1">
+                    <img src="img/Bridge.png" alt="Bridge" class="bridge">
+                </div>
+                <div class = "card-c1">
+                    <h2>橋下</h2>
+                    <hr>
+                    <h4>橋下因為少有人往來停留，地面平整且可遮蔽風吹雨打，喜歡安靜度日的人常選擇睡在這裡。</h4>
+                </div>
+            </div>
+            <!--card5-->
+            <div class = "card1">
+                <div class = "card-img1">
+                    <img src="img/Park.png" alt="Park" class="park">
+                </div>
+                <div class = "card-c1">
+                    <h2>公園</h2>
+                    <hr>
+                    <h4>橋下因為少有人往來停留，地面平整且可遮蔽風吹雨打，喜歡安靜度日的人常選擇睡在這裡。</h4>
+                </div>
             </div>
         </div>
     </div>
