--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <button>英</button>
         <div class="search-box">
             <input type="text" placeholder="Search" class="search-input">
-            <img src="img/Search.png" alt="Search Icon" class="search-icon">
+            <img src="img/img_index/Search.png" alt="Search Icon" class="search-icon">
         </div>
     </div>
     <!--nav-content-->
     <div class = "nav-content">
-        <img src="img/Home.png" alt="Home Icon" class="home-icon">
+        <img src="img/img_index/Home.png" alt="Home Icon" class="home-icon">
         <button>我要送愛</button>
         <button>關於我們</button>
         <button>更多故事</button>
@@ -28,7 +28,7 @@
     </div>
     <!--bigpic-->
     <div class = "bigpic">
-        <img src="img/Homeless.jpg" alt="Homeless" class="homeless">
+        <img src="img/img_index/Homeless.png" alt="Homeless" class="homeless">
         <h5>在生活之中，常常能看到滿街遍布的流浪之人，</h5>
         <h5>送愛之人為此產生，親自來到他們的聚集地給予溫暖，</h5>
         <h5>然而，各團體之間尚無互相協調送餐時間，常有重複送餐或整天無餐的狀況。</h5>
@@ -41,14 +41,14 @@
         <h2>平臺宗旨</h2>
         <div class = "giver">
             <h2>送愛者</h2>
-            <img src="img/Lefthand.png" alt="Lefthand" class="lefthand">
+            <img src="img/img_index/Lefthand.png" alt="Lefthand" class="lefthand">
             <h4>▪️真正送到無家者的痛點</h4>
             <h4>▪️更好規劃送餐時間及地點</h4>
             <h4>▪️避免食物/資源浪費</h4>
         </div>
         <div class = "taker">
             <h2>無家者</h2>
-            <img src="img/Righthand.png" alt="Refthand" class="refthand">
+            <img src="img/img_index/Righthand.png" alt="Righthand" class="righthand">
             <h4>▪️取餐不再靠運氣</h4>
             <h4>▪️收到當季真正需要的物品</h4>
             <h4>▪️取餐資訊即時查詢</h4>
@@ -68,13 +68,12 @@
         <div class = "spring">
             <h1>4～6月</h1>
             <h2>氣溫升高/ 進入梅雨季節</h2>
-            <img src="img/Spring.png" alt="Spring" class="spring">
+            <img src="img/img_index/Spring.png" alt="Spring" class="spring">
             <div class = "carousel">
-                <button class="arrow">&#8249;</button>
                 <!--card1-->
                 <div class = "card">
                     <div class = "card-img">
-                        <img src="img/Pad.png" alt="Pad" class="pad">
+                        <img src="img/img_index/Pad.png" alt="Pad" class="pad">
                     </div>
                     <div class = "card-c">
                         <h4>睡袋和防潮墊</h4>
@@ -84,7 +83,7 @@
                 <!--card2-->
                 <div class = "card">
                     <div class="card-img">
-                        <img src="img/Shoe.png" alt="Shoe" class="shoe">
+                        <img src="img/img_index/Shoe.png" alt="Shoe" class="shoe">
                     </div>
                     <div class = "card-c">
                         <h4>防水鞋套、雨靴</h4>
@@ -94,7 +93,7 @@
                 <!--card3-->
                 <div class = "card">
                     <div class = "card-img">
-                        <img src="img/Raincoat.png" alt="Raincoat" class="raincoat">
+                        <img src="img/img_index/Raincoat.png" alt="Raincoat" class="raincoat">
                     </div>
                     <div class = "card-c">
                         <h4>輕便雨衣</h4>
@@ -104,27 +103,25 @@
                 <!--card4-->
                 <div class = "card">
                     <div class = "card-img">
-                        <img src="img/Mosquito.png" alt="Mosquito" class="mosquito">
+                        <img src="img/img_index/Mosquito.png" alt="Mosquito" class="mosquito">
                     </div>
                     <div class = "card-c">
                         <h4>防蚊用品</h4>
                         <p>春季蟲蚊多，可以提供防蚊噴霧或貼片。</p>
                     </div>
                 </div>
-                <button class="arrow">&#8250;</button>
             </div>
         </div>
         <!--summer-->
         <div class = "summer">
             <h1>7～9月</h1>
             <h2>氣溫高/ 颱風季節</h2>
-            <img src="img/Summer.png" alt="Summer" class="summer">
+            <img src="img/img_index/Summer.png" alt="Summer" class="summer">
             <div class = "carousel">
-                <button class="arrow">&#8249;</button>
                 <!--card1-->
                 <div class = "card">
                     <div class = "card-img">
-                        <img src="img/Sun.png" alt="Sun" class="sun">
+                        <img src="img/img_index/Sun.png" alt="Sun" class="sun">
                     </div>
                     <div class = "card-c">
                         <h4>防曬霜</h4>
@@ -134,7 +131,7 @@
                 <!--card2-->
                 <div class = "card">
                     <div class="card-img">
-                        <img src="img/Bottle.png" alt="Bottle" class="bottle">
+                        <img src="img/img_index/Bottle.png" alt="Bottle" class="bottle">
                     </div>
                     <div class = "card-c">
                         <h4>礦泉水或運動飲料</h4>
@@ -144,7 +141,7 @@
                 <!--card3-->
                 <div class = "card">
                     <div class = "card-img">
-                        <img src="img/Shirt.png" alt="Shirt" class="shirt">
+                        <img src="img/img_index/Shirt.png" alt="Shirt" class="shirt">
                     </div>
                     <div class = "card-c">
                         <h4>清涼衣物</h4>
@@ -154,7 +151,7 @@
                 <!--card4-->
                 <div class = "card">
                     <div class = "card-img">
-                        <img src="img/Mosquito.png" alt="Mosquito" class="mosquito">
+                        <img src="img/img_index/Mosquito.png" alt="Mosquito" class="mosquito">
                     </div>
                     <div class = "card-c">
                         <h4>驅蚊劑和蚊帳</h4>
@@ -164,27 +161,25 @@
                 <!--card5-->
                 <div class = "card">
                     <div class = "card-img">
-                        <img src="img/Instant.png" alt="Instant" class="instant">
+                        <img src="img/img_index/Instant.png" alt="Instant" class="instant">
                     </div>
                     <div class = "card-c">
                         <h4>即時食品</h4>
                         <p>如罐頭、水果、能量棒等，保持簡單易儲存。</p>
                     </div>
                 </div>
-                <button class="arrow">&#8250;</button>
             </div>
         </div>
         <!--autumn-->
         <div class = "autumn">
             <h1>10～12月</h1>
             <h2>氣溫漸冷/ 降雨減少</h2>
-            <img src="img/Autumn.png" alt="Autumn" class="autumn">
+            <img src="img/img_index/Autumn.png" alt="Autumn" class="autumn">
             <div class = "carousel">
-                <button class="arrow">&#8249;</button>
                 <!--card1-->
                 <div class = "card">
                     <div class = "card-img">
-                        <img src="img/Sock.png" alt="Sock" class="sock">
+                        <img src="img/img_index/Sock.png" alt="Sock" class="sock">
                     </div>
                     <div class = "card-c">
                         <h4>厚襪子</h4>
@@ -194,7 +189,7 @@
                 <!--card2-->
                 <div class = "card">
                     <div class="card-img">
-                        <img src="img/Coat.png" alt="Coat" class="coat">
+                        <img src="img/img_index/Coat.png" alt="Coat" class="coat">
                     </div>
                     <div class = "card-c">
                         <h4>防風外套和長褲</h4>
@@ -204,7 +199,7 @@
                 <!--card3-->
                 <div class = "card">
                     <div class = "card-img">
-                        <img src="img/Apple.png" alt="Apple" class="apple">
+                        <img src="img/img_index/Apple.png" alt="Apple" class="apple">
                     </div>
                     <div class = "card-c">
                         <h4>營養豐富的食物</h4>
@@ -214,27 +209,25 @@
                 <!--card4-->
                 <div class = "card">
                     <div class = "card-img">
-                        <img src="img/Mask.png" alt="Mask" class="mask">
+                        <img src="img/img_index/Mask.png" alt="Mask" class="mask">
                     </div>
                     <div class = "card-c">
                         <h4>口罩</h4>
                         <p>秋冬季節空氣品質較不佳，避免街友受到流感或其他呼吸道疾病的影響。</p>
                     </div>
                 </div>
-                <button class="arrow">&#8250;</button>
             </div>
         </div>
         <!--winter-->
         <div class = "winter">
             <h1>1～3月</h1>
             <h2>氣溫較低/ 雨量相對較少</h2>
-            <img src="img/Winter.png" alt="Winter" class="winter">
+            <img src="img/img_index/Winter.png" alt="Winter" class="winter">
             <div class = "carousel">
-                <button class="arrow">&#8249;</button>
                 <!--card1-->
                 <div class = "card">
                     <div class = "card-img">
-                        <img src="img/Pill.png" alt="Pill" class="pill">
+                        <img src="img/img_index/Pill.png" alt="Pill" class="pill">
                     </div>
                     <div class = "card-c">
                         <h4>應急藥物</h4>
@@ -244,7 +237,7 @@
                 <!--card2-->
                 <div class = "card">
                     <div class="card-img">
-                        <img src="img/Pad.png" alt="Pad" class="pad">
+                        <img src="img/img_index/Pad.png" alt="Pad" class="pad">
                     </div>
                     <div class = "card-c">
                         <h4>睡袋和防潮墊</h4>
@@ -254,7 +247,7 @@
                 <!--card3-->
                 <div class = "card">
                     <div class = "card-img">
-                        <img src="img/Coat.png" alt="Coat" class="coat">
+                        <img src="img/img_index/Coat.png" alt="Coat" class="coat">
                     </div>
                     <div class = "card-c">
                         <h4>保暖衣物</h4>
@@ -264,7 +257,7 @@
                 <!--card4-->
                 <div class = "card">
                     <div class = "card-img">
-                        <img src="img/Hotwater.png" alt="Hotwatert" class="hotwater">
+                        <img src="img/img_index/Hotwater.png" alt="Hotwatert" class="hotwater">
                     </div>
                     <div class = "card-c">
                         <h4>熱飲保溫瓶</h4>
@@ -274,14 +267,13 @@
                 <!--card5-->
                 <div class = "card">
                     <div class = "card-img">
-                        <img src="img/Instant.png" alt="Instant" class="instant">
+                        <img src="img/img_index/Instant.png" alt="Instant" class="instant">
                     </div>
                     <div class = "card-c">
                         <h4>即時食品</h4>
                     <p>如泡麵、罐頭食品、麵包等，方便加熱或食用。</p>
                     </div>
                 </div>
-                <button class="arrow">&#8250;</button>
             </div>
         </div>
         <!--how-->
@@ -290,7 +282,9 @@
             <!--card1-->
             <div class = "card1">
                 <div class = "card-img1">
-                    <img src="img/Station.png" alt="Station" class="station">
+                    <button class="arrow">&#8249;</button>
+                    <img src="img/img_index/Station.png" alt="Station" class="station">
+                    <button class="arrow">&#8250;</button>
                 </div>
                 <div class = "card-c1">
                     <h2>車站</h2>
@@ -301,7 +295,9 @@
             <!--card2-->
             <div class = "card1">
                 <div class = "card-img1">
-                    <img src="img/Underpass.png" alt="Underpass" class="underpass">
+                    <button class="arrow">&#8249;</button>
+                    <img src="img/img_index/Underpass.png" alt="Underpass" class="underpass">
+                    <button class="arrow">&#8250;</button>
                 </div>
                 <div class = "card-c1">
                     <h2>地下道</h2>
@@ -312,7 +308,9 @@
             <!--card3-->
             <div class = "card1">
                 <div class = "card-img1">
-                    <img src="img/Arcade.png" alt="Arcade" class="arcade">
+                    <button class="arrow">&#8249;</button>
+                    <img src="img/img_index/Arcade.png" alt="Arcade" class="arcade">
+                    <button class="arrow">&#8250;</button>
                 </div>
                 <div class = "card-c1">
                     <h2>騎樓</h2>
@@ -323,7 +321,9 @@
             <!--card4-->
             <div class = "card1">
                 <div class = "card-img1">
-                    <img src="img/Bridge.png" alt="Bridge" class="bridge">
+                    <button class="arrow">&#8249;</button>
+                    <img src="img/img_index/Bridge.png" alt="Bridge" class="bridge">
+                    <button class="arrow">&#8250;</button>
                 </div>
                 <div class = "card-c1">
                     <h2>橋下</h2>
@@ -334,7 +334,9 @@
             <!--card5-->
             <div class = "card1">
                 <div class = "card-img1">
-                    <img src="img/Park.png" alt="Park" class="park">
+                    <button class="arrow">&#8249;</button>
+                    <img src="img/img_index/Park.png" alt="Park" class="park">
+                    <button class="arrow">&#8250;</button>
                 </div>
                 <div class = "card-c1">
                     <h2>公園</h2>
