--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>台灣無家者送愛整合平臺</title>
-    <link href="style.css" rel="stylesheet" type="text/css" />
+    <link href="https://necolas.github.io/normalize.css/" rel="stylesheet" type="text/css" />
+    <link href="CSS/index.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <!--nav-header-->
     <div class = "nav-header"> 
-        <h2>台灣無家者送愛整合平臺</h2>
-        <button>中</button>
-        <button>英</button>
-        <div class="search-box">
-            <input type="text" placeholder="Search" class="search-input">
-            <img src="img/img_index/Search.png" alt="Search Icon" class="search-icon">
+        <h2 style="color: white;">台灣無家者送愛整合平臺</h2>
+        <div class="header-r">
+            <button>中</button>
+            <button>英</button>
+            <div class="search-box">
+                <input type="text" placeholder="Search" class="search-input">
+                <img src="img/img_index/Search.png" alt="Search Icon" class="search-icon">
+            </div>
         </div>
     </div>
     <!--nav-content-->
@@ -282,9 +285,7 @@
             <!--card1-->
             <div class = "card1">
                 <div class = "card-img1">
-                    <button class="arrow">&#8249;</button>
                     <img src="img/img_index/Station.png" alt="Station" class="station">
-                    <button class="arrow">&#8250;</button>
                 </div>
                 <div class = "card-c1">
                     <h2>車站</h2>
@@ -295,9 +296,7 @@
             <!--card2-->
             <div class = "card1">
                 <div class = "card-img1">
-                    <button class="arrow">&#8249;</button>
                     <img src="img/img_index/Underpass.png" alt="Underpass" class="underpass">
-                    <button class="arrow">&#8250;</button>
                 </div>
                 <div class = "card-c1">
                     <h2>地下道</h2>
@@ -308,9 +307,7 @@
             <!--card3-->
             <div class = "card1">
                 <div class = "card-img1">
-                    <button class="arrow">&#8249;</button>
                     <img src="img/img_index/Arcade.png" alt="Arcade" class="arcade">
-                    <button class="arrow">&#8250;</button>
                 </div>
                 <div class = "card-c1">
                     <h2>騎樓</h2>
@@ -321,9 +318,7 @@
             <!--card4-->
             <div class = "card1">
                 <div class = "card-img1">
-                    <button class="arrow">&#8249;</button>
                     <img src="img/img_index/Bridge.png" alt="Bridge" class="bridge">
-                    <button class="arrow">&#8250;</button>
                 </div>
                 <div class = "card-c1">
                     <h2>橋下</h2>
@@ -334,21 +329,59 @@
             <!--card5-->
             <div class = "card1">
                 <div class = "card-img1">
-                    <button class="arrow">&#8249;</button>
                     <img src="img/img_index/Park.png" alt="Park" class="park">
-                    <button class="arrow">&#8250;</button>
                 </div>
                 <div class = "card-c1">
                     <h2>公園</h2>
                     <hr>
-                    <h4>橋下因為少有人往來停留，地面平整且可遮蔽風吹雨打，喜歡安靜度日的人常選擇睡在這裡。</h4>
+                    <h4>入夜後，涼亭、長椅等空位，成為了接頭生存者的休息之處，內附的公共廁所也十分方便露宿時洗澡與如廁，維持自身與周圍清潔。</h4>
                 </div>
             </div>
+            <button class="arrow">&#8249;</button>
+            <button class="arrow">&#8250;</button>
+        </div>
+        <div class = "dots">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
         </div>
     </div>
     <!--footer-->
-    <div class = "footer"></div>
-    
+    <div class = "footer">
+        <div class = left>
+            <h2>Homeless Care & Meal Coordination Platform</h2>
+            <h6>數位二甲 | 111219005 | 吳函蓁</h6>
+            <h6>數位二甲 | 111219007 | 趙翊如</h6>
+            <h6>113學年度上學期（大二）</h6>
+            <h6>前端工程設計</h6>
+            <h6>期中專題成果</h6>
+        </div>
+        <div class = "middle1">
+            <h3>人生百味</h3>
+            <h6>官方網站</h6>
+            <h6>專案列表</h6>
+            <h6>議題文章</h6>
+            <h6>捐款支持</h6>
+            <h6>街頭生存指南</h6>
+            <h6>無家者小幫手</h6>
+        </div>
+        <div class = "middle2">
+            <h3>其他</h3>
+            <h6>開發者支持</h6>
+            <h6>平臺問題回報</h6>
+            <h6>更多影音作品</h6>
+        </div>
+        <div class = right>
+            <h3>FOLLOW</h3>
+            <img src="img/img_index/Instagram.png" alt="Instagram" class="instagram">
+            <img src="img/img_index/Facebook.png" alt="Facebook" class="facebook">
+            <img src="img/img_index/Youtube.png" alt="Youtube" class="youtube">
+        </div>
+        <hr>
+        <p>2024 produced by Yi-Ju, Chao & Han-Jhen, Wu</p>
+    </div>
 </body>
 </html>
 
